# spike-claude-code-rlm

./: .gitignore  ALGORITHM.md  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  demo.py  examples.py  pyproject.toml  setup.py
.claude/: settings.json  statusline.sh
.claude-plugin/: marketplace.json
.claude/hooks/: auto-commit.sh  per-edit-fix.sh  quality-gate.sh  session-start.sh  style-guide-check.sh
.claude/skills/rlm/: SKILL.md
.devcontainer/: .gitignore  Dockerfile  build.sh  clean.sh  devcontainer.json  postCreate.sh  up.sh
.github/: copilot-instructions.md
.github/workflows/: algorithm-pdf.yaml  pypi-publish.yaml
docs/: spike-structured-output.md
examples/: README.md
examples/01-constitution-analysis/: README.md  constitution.txt  run.py  run.sh
examples/02-log-forensics/: README.md  generate_logs.py  run.py  run.sh
examples/03-codebase-audit/: README.md  run.py  run.sh
examples/04-literary-analysis/: README.md  claude-workflow.md  fetch_text.sh
examples/05-csv-data-analysis/: README.md  claude-workflow.md  generate_dataset.py
plugin/: .gitignore  README.md  pyproject.toml  requirements.txt  rlm
plugin/.claude-plugin/: plugin.json
plugin/rlm/: backends.py
plugin/skills/rlm/: SKILL.md
rlm/: __init__.py  __main__.py  backends.py  cli.py  config.py  context.py  prompts.py  repl.py  rlm.py
rlm/sample_data/: large_document.txt
tests/: conftest.py  test_backends.py  test_config.py  test_context.py  test_context_engineer.py  test_integration.py  test_llm_smoke.py  test_prompts.py  test_repl.py  test_rlm.py  test_smoke_backends.py
